# BrushUp

./: .env.example  .gitignore  .pre-commit-config.yaml  .replit  .replit.new  AWS_S3_INTEGRATION.md  BRAVE_BROWSER_NOTES.md  DEPLOYMENT_FIXES_APPLIED.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE.md  GOOGLE_LOGIN_INSTRUCTIONS.md  GOOGLE_OAUTH_SETUP.md  PROFILE_API_IMPLEMENTATION.md  PROJECT_OVERVIEW.md  README-UPDATED.md  README.md  README_AUTHENTICATION.md  REPLIT_HTTP_SERVER.md  add_focus_js.py  add_focus_mode.py  app.py  brushup.py  cert.pem  cert.pem.bak  cert.pem.disabled  configure_http.py  configure_server.py  cookies.txt  csrf_cookie.txt  deploy.py  direct_server.py  disable_https.py  django_http_server.py  django_server_nossl.py  dot_replit.example  easy_http_server.py  final_fix.py  fix_certificate.py  fix_critique_serializer.py  fix_js_literals.py  (+141 more)
archive/: README.md  direct_django_server.py  final_fix.sh  fix_critique_api.py  fix_critique_serializer_clean.py  fix_database.py  gunicorn_config_http.py  http_django_server.py  http_for_replit.py  http_no_ssl_server.py  http_server_fixed.py  http_server_runner.py  main.py.http  main_http.py  no_ssl_server.sh  pure_http_runner.py  run_brushup.sh  run_django.sh  run_django_http.sh  run_fixed_server.py  run_http_app.py  run_http_brush_up.sh  run_http_no_ssl.py  run_http_server.py  run_replit.py  run_simple_http.py  runserver.py  runserver_http.py  server.py  start_django_http.sh  start_http_app.sh  start_http_mode.py  start_http_server.py  start_server_http.sh  universal_http_server.py
artcritique/: asgi.py  (+4 more)
(+459 files in other folders)
